<resources>
    <string name="app_name">Przemysl Guide</string>

    <string name="action_settings">Settings</string>

    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_error_title">Sorry</string>

    <string name="empty_ribots">There aren\'t any ribots</string>
    <string name="error_loading_ribots">There was a problem loading the ribots</string>

    <string name="loremIpsum">Czym jest Lorem Ipsum?
        Lorem Ipsum jest tekstem stosowanym jako przykładowy wypełniacz w przemyśle poligraficznym.
        Został po raz pierwszy użyty w XV w. przez nieznanego drukarza do wypełnienia tekstem próbnej książki.
        Pięć wieków później zaczął być używany przemyśle elektronicznym, pozostając praktycznie niezmienionym.
        Spopularyzował się w latach 60. XX w. wraz z publikacją arkuszy Letrasetu, zawierających fragmenty Lorem Ipsum,
        a ostatnio z zawierającym różne wersje Lorem Ipsum oprogramowaniem przeznaczonym do realizacji druków na komputerach osobistych,
        jak Aldus PageMaker</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_details">Details</string>

    <string name="showMap">All objects</string>
    <string name="showHotels">Hotels</string>
    <string name="showCastles">Castles</string>
    <string name="showForts">Forts</string>
    <string name="showStations">Stations</string>
    <string name="showBunkers">Bunkers</string>

    <string name="action_logout">Logout</string>

    <!--activity_email-->
    <string name="enterMailDescription">Your name</string>
    <string name="mailHint">\@gmail.com</string>
    <string name="mailLoginDescription">This is the addres that you use for the team site.</string>
    <string name="nextButton">Next</string>

    <!--Validation Error-->
    <string name="emptyEmailAddressValidation">email address can not be empty</string>
    <string name="invalidEmailAddress">invalid email address</string>
    <string name="emptyPasswordValidation">empty password</string>
    <string name="passwordDescription">Enter your password</string>
    <string name="notEnoughPasswordChars">password must be at least 4 chars long</string>

    <!--Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Buttons-->
    <string name="logout">Logout</string>

    <!--Errors-->
    <string name="emptyListDescription">The list is empty.</string>
    <string name="noInternetError">No internet connection.</string>
    <string name="try_again">try again</string>
    <string name="Something_went_wrong">Something went wrong</string>
    <string name="error">Error</string>
    <string name="unexpected_error">Unexpected error</string>

    <string name="RETRY">Retry </string>
    <string name="goToMap">Go to map</string>
    <string name="navigateTo">Navigate to</string>
    <string name="streetView">Show google street view</string>
    <string name="all_places">All places</string>
    <string name="processing">processing...</string>

</resources>
