<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/navMap"
            android:title="@string/showMap" />
        <item
            android:id="@+id/navMapWithHotels"
            android:title="@string/showHotels" />

        <item
            android:id="@+id/navMapWithCastles"
            android:title="@string/showCastles" />

        <item
            android:id="@+id/navMapWithFort"
            android:title="@string/showForts" />

        <item
            android:id="@+id/navMapWithStation"
            android:title="@string/showStations" />

        <item
            android:id="@+id/navMapWithBunker"
            android:title="@string/showBunkers" />
    </group>

    <item android:title="Options">
        <menu>
            <item
                android:id="@+id/navLogout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
